<resources>
    <string name="app_name">GreenShare</string>
    <string name="bt_login">Entrar</string>
    <string name="tv_register_question">Ainda não possui um cadastro?</string>
    <string name="bt_register">Criar uma nova conta</string>
    <string name="et_password">Insira sua senha</string>
    <string name="et_email">Insira seu email</string>
    <string name="action_return">Retornar</string>
    <string name="bt_menu_register_one">Iniciar</string>
    <string name="tv_title_register_one">Você está prestes a criar sua conta</string>
    <string name="tv_description_register_one">Iniciaremos um passo a passo simples e rápido</string>
    <string name="bt_start_register_one">Iniciar</string>
    <string name="tv_name_question_register_two">Qual é o seu nome?*</string>
    <string name="et_hint_name">Maria da Silva Pereira</string>
    <string name="tv_email_question_register_two">Qual seu email?*</string>
    <string name="et_hint_email">example@email.com</string>
    <string name="bt_next">Avançar</string>
    <string name="invalid_name">Nome inválido. Tente novamente</string>
    <string name="invalid_birthday">Data inválida. Tente novamente</string>
    <string name="invalid_user">Usuário inválido. Voltando a tela de login</string>
    <string name="name">Nome:</string>
    <string name="dateOfBirth">Data de Nascimento:</string>
    <string name="emailRequest">Digite seu email:</string>
    <string name="phoneNumberRequest">Digite seu número de celular:</string>
    <string name="et_phone_number">5195954545</string>
    <string name="emailAlert">Seu email será usado para login e para uso de serviços de suporte</string>
    <string name="passwordRequest">Digite sua senha:</string>
    <string name="passwordConfirm">Digite sua senha novamente:</string>
    <string name="etHintEmail">Email</string>
    <string name="etHintPassword">Senha</string>
    <string name="invalidPassword">Senha inválida</string>
    <string name="invalidEmail">Email inválido</string>
    <string name="invalidaConfirmPassword">Senha e senha de confirmação diferentes</string>
    <string name="passwordAlert">Mínimo de 8 caracteres</string>
    <string name="email">Email:</string>
    <string name="btConfirm">Cadastrar</string>
    <string name="btReset">Cancelar</string>
    <string name="resetMessage">Resetando cadastro...</string>
    <string name="unexpectedErrorReturnActivity">Erro inesperado no sistema, voltando a tela anterior...</string>
    <string name="invalid_login">Login inválido</string>
    <string name="valid_login">Logado com sucesso</string>
    <string name="login_failed">Falha ao conectar com servidor, tente novamente.</string>
    <string name="country_request">Selecione seu país</string>
    <string name="state_request">Selecione seu estado</string>
    <string name="city_request">Selecione sua cidade</string>
    <string name="flower_shop">Floricultura</string>
    <string name="natural_person">Pessoa Física</string>
    <string name="connection_error">Erro de conexão, tentando novamente...</string>
    <string name="country_not_selected">Selecione um país</string>
    <string name="state_not_selected">Selecione um estado</string>
    <string name="city_not_selected">Selecione uma cidade</string>
    <string name="address_number">Ex.: 5222</string>
    <string name="neighborhood_example">Ex.: Bairro Niteroi</string>
    <string name="address_name_example">Ex.: Rua Ana Maria</string>
    <string name="address_skip">Pular endereço</string>
    <string name="address_skip_alert">Sem o cadastro do endereço não é possível realizar ofertas e doações.</string>
    <string name="invalid_number_address">Número do endereço inválido</string>
    <string name="invalid_address">Cidade inválida, tente novamente</string>
</resources>
